--- a/doc/static/site.css
+++ b/doc/static/site.css
@@ -62,3 +62,23 @@ pre {
 background-color: #F7A7AA;
   border-color: #F1595F;
 }
+
+/* Fix for: https://github.com/readthedocs/sphinx_rtd_theme/issues/301 */
+/* Fix taken from: https://github.com/readthedocs/sphinx_rtd_theme/pull/383/ */
+span.eqno {
+  margin-left: 5px;
+  float: right;
+  /* position the number above the equation so that :hover is activated */
+  z-index: 1;
+  position: relative;
+}
+
+span.eqno .headerlink {
+  display: none;
+  visibility: hidden;
+}
+
+span.eqno:hover .headerlink {
+  display: inline-block;
+  visibility: visible;
+}
